--- a/styles/add_tasks_mediaQuery.css
+++ b/styles/add_tasks_mediaQuery.css
@@ -143,7 +143,7 @@
     }
     
    .addTasksFooter{
-        padding: 10px;
+        padding: 8px;
         margin-left: 0;
         padding: 15px;
         width: 360px;
@@ -436,10 +436,15 @@
 
 }
 
-@media(min-width: 781px){
+@media(min-width: 781px) and (max-width: 900px){
+
+    .textContainer_addTask{
+        margin-left: 280px;  
+    }
 
     .group66_addTask{
         margin-left: 0;
+        padding:15px;
         flex-direction: column;
         align-items: center;
     }
@@ -451,10 +456,20 @@
     .inputRight_addTask{ 
         margin-top: 54px;    
     }
-    .addTasksFooter{       
-        margin-left: 225px;
+
+    .addTasksFooter{ 
+        margin-left: 250px;
         width: 480px;
    }
+   
+   .comment{
+    display: flex;
+    text-wrap: wrap;
+    width: 150px;
+    margin-bottom: 50px;
+    margin-left: 40px;
+   }
+
 }
 
 
