--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -20,8 +20,8 @@
     </svg>
   </div>
   <div onclick="doNotClose(event)" id="submenu" class="submenu-container">
-   <span onclick="loadLegalNotice()" class="submenu-text">Legal Notice</span>
-   <span onclick="loadPrivacyPolicy()" class="submenu-text">Privacy Policy</span>
+   <span onclick="renderLegalNoticeContent()" class="submenu-text">Legal Notice</span>
+   <span onclick="renderPrivacyPolicyContent()" class="submenu-text">Privacy Policy</span>
    <a href="./loginpage.html" class="submenu-text">Log out</a>
   </div>
 </header>
