--- a/assets/templates/sidebar.html
+++ b/assets/templates/sidebar.html
@@ -42,8 +42,8 @@
             </div>
             <!-- Datenschutz -->
             <div class="privacy">
-                <div class="dataProtection"><a href="#">Privacy Polivy</a></div>
-                <div class="dataProtection">Legal notice</div>
+                <span onclick="renderPrivacyPolicyContent()" class="dataProtection">Privacy Policy</span>
+                <span onclick="renderLegalNoticeContent()" class="dataProtection">Legal Notice</span>
             </div>
         </div>
     </div>
