link add task sidebar

--- a/assets/templates/sidebar.html
+++ b/assets/templates/sidebar.html
@@ -15,8 +15,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="sidebarCategory" onclick="changeContent(this)">
-                      <a href="./add_task.html">
+                <div class="sidebarCategory" onclick="render_addTask()">
                         <div class="sidebarLink">
                             <img src="./assets/img/Icons_add_task.png">
                             <div class="sidebarMenuText">Add Task</div>
