--- a/styles/add_tasks.css
+++ b/styles/add_tasks.css
@@ -312,7 +312,7 @@ display: block; /* Show the hover image when the container is being hovered */
     width:440px;
 }
 
-spanClass{
+.spanClass{
     color: #FF8190;
     font-family: "Inter", sans-serif;
     font-size: 20px;
