--- a/assets/templates/sidebar.html
+++ b/assets/templates/sidebar.html
@@ -7,8 +7,7 @@
             </div>
             <!-- Menu -->
             <div class="sidebarLinks">
-                <div class="sidebarCategory"onclick="changeContent(this)">
-                    <a href="./summary.html">
+                <div class="sidebarCategory"onclick="renderSummaryContent()">
                         <div class="sidebarLink">
                             <img src="./assets/img/Icons_summary.png">
                             <div class="sidebarMenuText">Summary</div>
@@ -22,8 +21,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="sidebarCategory"onclick="changeContent(this)">
-                      <a href="../../board.html">
+                <div class="sidebarCategory"onclick="renderBoardHTML()">
                         <div class="sidebarLink">
                             <img src="./assets/img/Icons_board.png">
                             <div class="sidebarMenuText">Borard</div>
