--- a/assets/templates/sidebar.html
+++ b/assets/templates/sidebar.html
@@ -28,8 +28,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="sidebarCategory"onclick="changeContent(this)">
-                      <a href="./summary.html">
+                <div class="sidebarCategory"onclick="render_contactsHtml()">
                         <div class="sidebarLink">
                             <img src="./assets/img/Icons_contacts.png">
                             <div class="sidebarMenuText">Contacts</div>
