--- a/styles/add_tasks.css
+++ b/styles/add_tasks.css
@@ -634,7 +634,6 @@ align-items: center;
 gap: 16px;
 }
 
-
 .titleSubtasks{
 width: 100%;
 color: var(--black, #000);
@@ -962,17 +961,14 @@ line-height: 120%; /* 24px */
     height: 32px;  
 }
 
-.titlePrio{
-  
+.titlePrio{  
     color: var(--Version-2-main-color, #2A3647);    
     font-size: 20px;
     font-weight: 400;
     line-height: 24px;
     width: 73px;
-
     font-family: "Inter", sans-serif;
-    font-size: 20px;
-    
+    font-size: 20px;    
 }
 
 .priorityUrgent-active {
@@ -1015,7 +1011,6 @@ line-height: 120%; /* 24px */
     overflow: auto;
 }
 
-
 ::-webkit-scrollbar-thumb{
     display: flex;
     align-items: center;
@@ -1029,11 +1024,10 @@ line-height: 120%; /* 24px */
 }
 
 ::-webkit-scrollbar{
-height:0px;       
+    height:0px;       
 }
 
-.custom-checkbox { 
-    
+.custom-checkbox {     
     font-size: 20px;
     font-family: "Inter", sans-serif;
     font-weight: 400;
@@ -1043,7 +1037,6 @@ height:0px;
     display: none;
 }
 
-
 .custom-checkbox label {
     display: flex;
     align-items: center;
@@ -1051,7 +1044,6 @@ height:0px;
     cursor: pointer;
     position: relative; 
 }
-
 
 .custom-checkbox label:before {
     content: '';
@@ -1064,7 +1056,7 @@ height:0px;
     left: 320px; 
 }
 
-.custom-checkbox input[type="checkbox"]:checked + label:before {
+.contactList:hover .custom-checkbox input[type="checkbox"]:checked + label:before{
     content: '';
     width: 24px;
     height: 24px;
@@ -1073,6 +1065,17 @@ height:0px;
     background-repeat: no-repeat;
     position: absolute;
     left: 320px;
+}
+
+.custom-checkbox input[type="checkbox"]:checked + label:before {
+    content: '';
+    width: 24px;
+    height: 24px;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 18 18' fill='none'%3E%3Cpath d='M17 8V14C17 15.6569 15.6569 17 14 17H4C2.34315 17 1 15.6569 1 14V4C1 2.34315 2.34315 1 4 1H12' stroke='white' stroke-width='2' stroke-linecap='round'/%3E%3Cpath d='M5 9L9 13L17 1.5' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: absolute;
+    left: 320px; /* Adjust this as needed */
 }
 
 .contactList{
@@ -1106,11 +1109,11 @@ height:0px;
 }
 
 .subtaskItem:hover{
-background-color: #eeeeee;
+    background-color: #eeeeee;
 }
 
 .subtaskItem:hover .iconsContainer{
-display: flex;
+    display: flex;
 }
 
 .edit{
@@ -1229,10 +1232,4 @@ display: flex;
 
 .d-none{
     display: none;
-}
-
-.checkedBoxWhite{
-    position: absolute;
-    background-color: #0038FF;
-    margin-left: 373px;
 }
