--- a/assets/templates/sidebar.html
+++ b/assets/templates/sidebar.html
@@ -6,31 +6,33 @@
                 <img src="./assets/img/logo-white.svg" alt="logo">
             </div>
             <!-- Menu -->
+            <div class="sidebarLinkContainer">
             <div class="sidebarLinks">
                 <div class="sidebarCategory"onclick="renderSummaryContent()">
                         <div class="sidebarLink">
-                            <img src="./assets/img/Icons_summary.png">
+                            <img class="sidebarIMG" src="./assets/img/Icons_summary.png">
                             <div class="sidebarMenuText">Summary</div>
                         </div>
                 </div>
                 <div class="sidebarCategory" onclick="render_addTask()">
                         <div class="sidebarLink">
-                            <img src="./assets/img/Icons_add_task.png">
+                            <img class="sidebarIMG" src="./assets/img/Icons_add_task.png">
                             <div class="sidebarMenuText">Add Task</div>
                         </div>
                 </div>
                 <div class="sidebarCategory"onclick="renderBoardHTML()">
                         <div class="sidebarLink">
-                            <img src="./assets/img/Icons_board.png">
+                            <img class="sidebarIMG" src="./assets/img/Icons_board.png">
                             <div class="sidebarMenuText">Borard</div>
                         </div>
                 </div>
                 <div class="sidebarCategory"onclick="render_contactsHtml()">
                         <div class="sidebarLink">
-                            <img src="./assets/img/Icons_contacts.png">
+                            <img class="sidebarIMG" src="./assets/img/Icons_contacts.png">
                             <div class="sidebarMenuText">Contacts</div>
                         </div>
                 </div>
+            </div>
             </div>
             <!-- Datenschutz -->
             <div class="privacy">
