--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -111,11 +111,11 @@
   font-family: "Inter", sans-serif;
   font-weight: 400;
   font-size: 16px;
+  margin-left: 60px;
   color: var(--textColor);
- margin-left: 60px;
 }
 
-.dataProtection:hover {
+.dataProtectionTextColor:hover {
   color: var(--sidebarTextHover);
   transform: scale(1.1);
 }
