--- a/styles/sidebar_responsive.css
+++ b/styles/sidebar_responsive.css
@@ -8,7 +8,7 @@ body{
 }
 
 .box-sizingResponsiv {
-   visibility: hidden;
+   /* visibility: hidden; */
     display: flex;
     align-items: center;
     width: 100%;
