--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -3,6 +3,8 @@
 }
 
 :root {
+  --sidebarBgColorResponsiv: #2A3647;
+  --linkActiveResponsiv: #091931; 
   --sidbarlinkHover: #2a3d59;
   --sidebarTextHover: #1aa7e4;
   --sidebarBgColor: #2a3647;
@@ -118,4 +120,133 @@
 .dataProtectionTextColor:hover {
   color: var(--sidebarTextHover);
   transform: scale(1.1);
+}
+
+/*side bar responsive*/
+
+.box-sizingResponsiv {
+ /* visibility: hidden; */
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 80px;
+  justify-content: space-around;
+  position: fixed;  
+  background: var(--sidebarBgColorResponsiv);
+  z-index: 999;
+  font-family: 'Inter', sans-serif ;
+}
+
+.sidebarLinkResponsiv {
+  display: flex;
+  padding: 2px 16px;
+  justify-content: space-around;
+  align-items: center;
+  display: flex;
+  width: 76px;
+  height: 76px;
+}
+
+.sidebarMenuTextResponsiv {
+  font-family: "Inter", sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%;
+}
+
+.summaryBtHover{
+  display:none;
+}
+
+.sidebarCategoryResponsiv:hover .summaryBtHover{
+  display: block;
+  display: flex;
+  border-radius: 18px;
+  width: 76px;
+  height: 76px;
+  background-color: #091931;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+} 
+
+.summaryBt{
+  display: block;
+}
+
+.sidebarCategoryResponsiv:hover .summaryBt{
+  display: none;
+} 
+
+.addTaskBtHover{
+  display:none;
+}
+
+.sidebarCategoryResponsiv:hover .addTaskBtHover{
+  display: block;
+  display: flex;
+  border-radius: 18px;
+  width: 76px;
+  height: 76px;
+  background-color: #091931;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+} 
+
+.addTaskBt{
+  display: block;
+}
+
+.sidebarCategoryResponsiv:hover .addTaskBt{
+  display: none;
+} 
+
+.boardBtHover{
+  display:none;
+}
+
+.sidebarCategoryResponsiv:hover .boardBtHover{
+  display: block;
+  display: flex;
+  border-radius: 18px;
+  width: 76px;
+  height: 76px;
+  background-color: #091931;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+} 
+
+.boardBt{
+  display: block;
+}
+
+.sidebarCategoryResponsiv:hover .boardBt{
+  display: none;
+}
+
+.contactsBtHover{
+  display:none;
+}
+
+.sidebarCategoryResponsiv:hover .contactsBtHover{
+  display: block;
+  display: flex;
+  border-radius: 18px;
+  width: 76px;
+  height: 76px;
+  background-color: #091931;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+} 
+
+.contactsBt{
+  display: block;
+}
+
+.sidebarCategoryResponsiv:hover .contactsBt{
+  display: none;
 }
